Version 5.0.0
Compiled with Java 21 & Vaadin 24.7.2.

SOChart is now extended from LitComponentWithSize.
The group Id for the artifact is renamed to com.storedobject

Refactor chart event handling and improve event API

Replaced `SOEvent` with `ChartEvent` and introduced `ChartEventHandler` for cleaner event handling. Enhanced SOChart to support event listeners with streamlined event registration and dispatching. Various improvements to documentation, code style, and functionality across chart components.